--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -5,50 +6,215 @@
     <meta name="keywords" keywords="ВДОМА, вільний простір, дитяча кімната, майстер клас, лекції, робота, самовизначення, індивідуальний простір, твої ідеї, втілити мрії,
     free space, master class, space for your ideas, coaching, coworking, vdoma"/>
     <title>ВДОМА</title>
-    <link rel="stylesheet" href="vDoma.css" type="text/css">
-      <link href="icon_home.PNG" type="image/x-icon" rel="shortcut icon">
+      <link rel="stylesheet" href="styles/vDoma.css" type="text/css">
+      <link href="media/icon_home.PNG" type="image/x-icon" rel="shortcut icon">
+      <link rel="stylesheet" href="styles/scheduls.css" type="text/css">
+      <link rel="stylesheet" href="styles/slider_style.css " type="text/css">
+      <link rel="stylesheet" href="styles/schema.css " type="text/css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
     <div id="page-wrap">
-<header>
-<a class="Logo" href="index.html" title="на головну"> <img src="icon_home.PNG"></img></a>
-
-<span><a class="menu" href=""  title="Що ми можемо Вам запропонувати"> ПОСЛУГИ </a></span>
-<span><a class="menu" href=""  title="Дізнайся про найближчі події"> ПОДІЇ </a></span>
-<span><a class="menu" href=""  title="Схеми розташування наших приміщень"> СХЕМИ </a></span>
-<span><a class="menu" href=""  title="Розклад наших робочих годин"> РОЗКЛАД </a></span>
-<span><a class="menu" href=""  title="Де нас знайти?"> РОЗТАШУВАННЯ </a></span>
-<span><a class="menu" href=""  title="Дізнайся про нас більше"> ВДОМА </a></span>
+    <header>
+        <a class="Logo" href="index.html" title="на головну"> <img src="media/1111.jpg"></img></a>
+          <nav class="navigation" style="margin-top:-80px;">
+            <ul>
+                <li class="menu" title=" Хто ми ?"><a href="#home" >ВДОМА</a></li>
+                <li class="menu" title="Що ми можемо Вам запропонувати"><a href="#services">ПОСЛУГИ</a></li>
+                <li class="menu" title="Дізнайся про найближчі події"><a href="#photogalery">ФОТОГАЛЕРЕЯ</a></li>
+                <li class="menu" title="Розклад наших робочих годин"><a href="#schedule">РОЗКЛАД</a></li>
+                <li class="menu" title="Схеми розташування наших приміщень"><a href="#schema">СХЕМИ</a></li>
+                <li class="menu" title="Дізнайся про нас більше"><a href="#contacts">КОНТАКТИ</a></li>
+                <li class="menu" title=" куля бажань"><a href="#ball" ><img src="media/ball.jpg"/></a></li>
+          </ul>
+      </nav>
 </header>
-<article>
+  <div/>
+    <article>
+    <div class="home_page">
+      <img class="img_home_page" src="media/page7.jpg"/>
+  </div>
+    <div class="about_us_logo"><h1 id="home"> ВДОМА <h1/></div><br/><br/><br/>
+    <div class="about_us">
+      <p><center><b>МІСЦЕ ДЛЯ ЛЮДЕЙ ТА ЇХ ЗАХОПЛЕНЬ.</b><center/><p/><br/>
+      <p>Соціальне підприємство, дружнє до дітей, в самому центрі міста, в будівлі 1835 року - ми однаково цінуємо стіни, в яких знаходимось, та людей, які сюди приходять.
+      Ми прагнемо наповнювати домашнім затишком події, які в нас відбуваються та допомагати розкривати потенціал наших відвідувачів.
+      Ми відкриті до всіх, але й цінуємо свободу вибору, особливості і точку зору кожного.<br/>
+      З 2017 року ВДОМА гостювали більше 800 подій, які відвідали більше 8000 осіб.</p>
+  </div>
+        <div>  <img class="about_us_photo" src="media/DoSome.jpg"><img/></div>
+          <p id="photogalery"> фотогалерея</p>
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <img src="media/slideshow/1.png"/ >
+            </div>
+                <div class="mySlides fade">
+                  <img src="media/slideshow/2.jpg"/ >
+              </div>
+                  <div class="mySlides fade">
+                    <img src="media/slideshow/3.jpg"/ >
+                </div>
+                    <div class="mySlides fade">
+                      <img src="media/slideshow/4.png"/ >
+                  </div>
+                      <div class="mySlides fade">
+                        <img src="media/slideshow/5.jpg"/ >
+                    </div>
+                        <div class="mySlides fade">
+                          <img src="media/slideshow/6.jpg"/>
+                      </div>
+                        <div class="mySlides fade">
+                          <img src="media/slideshow/7.jpg"/ >
+                      </div>
+                        <div class="mySlides fade">
+                          <img src="media/slideshow/8.jpg"/ >
+                      </div>
+                  </div>
+      <div class="slide-text">
+        <p><b>Реалізуй свій потенціал,-</br> приєднюйся до людей, які не бояться діяти та творити.</b></br></br></br>
+        Організовуй свій майстер-клас, стань вчителем для інших! Працюй над ідеями та ділися ними з однодумцями.
+      Навчайся та отримуй нові зняння, враження, друзів. Спокій, комфорт та затишок,- ось чого потребуєш ти.</br>
+      Завітай до нас та переконайся, що ми саме те, що тобі потрібно вже сьогодні!</br></br> <img src="media/icon_home.png"/> </p>
+      </div>
+          <div class="events"> <h1>Дізнайся про найближчі події</h1></br>
+            <h3>22.02 Майстер-клас "Крила моєї мрії (цілі)"</h3></br>
+              <p>Що буде? </br>
+              1) Подорож у світ образів і почуттів - сеанс релаксації під приємну музику.</br>
+              2) Візуалізація - в розслабленому стані будемо подумки уявляти (візуалізувати) свої, цілі і мрії, "занурюватися" всередину себе, у світ своїх істинних бажань, які є в глибинах душі.
+              3) Істинність власного бажання вивчаємо за допомогою метафоричних асоціативних карт та арт-практик. </br>
+              4) Ділимося отриманим результатом один з одним, отримуємо зворотний зв'язок, а також слова підтримки і натхнення. </br>
+              5) Пізнаємо себе, знаходимо внутрішні ресурси для здійснення мрій, відкриваємо нові грані власної особистості!</p></br>
 
-<div class="home_page">
-  <h4> ВІЛЬНИЙ ПРОСТІР </h4>
-  <h5>місце для людей та їх захоплень</h5>
+                <h3>23.02 Крафт-театр: душевна вистава Лускунчик</h3> </br>
+                 <p>Крафт-театр - вперше в Івано-Франківську театр, який залучає дітей до дійства, творить і розважає одночасно!</br>
+              Трохи тіста, цукрової пудри і кориці - і на вас дивляться оченята героїв чарівної казки.
+              Вистава для дітей і батьків від Nataliia Datsenko завітає в наш простір, щоб разом створити чудо!</br>
+              Якщо ще не чули про такий театр, то погортайте стрічку Арт-багаж, це цікавезно, а в нашому випадку - ще й смачно і ароматно:)
+              .</p></br>
+                    <p>Початок о 17:00. Тривалість 1,5-2 години.</p></br>
 
-  <img class="img_home_page" src="2222.jpg"/>
-</div>
-</article>
-</div>
-<footer>
-<div class="contact">
-  <p> НАШІ КОНТАКТИ : </p><br/>
-  <p> тел. 050 72 87 114 </p>
-  <p> email: <a class="contact_href" href="vdoma.if@gmail.com">vdoma.if@gmail.com</a> </p>
- <a class="contact_href" href="https://www.facebook.com/prostirvdoma/"> ми в Facebook </a>
- <p> наша адреса: вул.Галицька 29 (3 поерх )<br/>
-   м.Івано - Франківськ <p/>
- </div>
- <div class="map"><div  style="overflow:hidden; width:600px; height:350px;"><iframe width="500" height="200" src="https://maps.google.com/maps?width=700&amp;height=440&amp;hl=en&amp;q=%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0%2C%20%D0%98%D0%B2%D0%B0%D0%BD%D0%BE-%D0%A4%D1%80%D0%B0%D0%BD%D0%BA%D0%BE%D0%B2%D1%81%D0%BA%2C%20%D1%83%D0%BB.%20%D0%93%D0%B0%D0%BB%D0%B8%D1%86%D0%BA%D0%B0%D1%8F%20%2029+(%D0%92%D1%96%D0%BB%D1%8C%D0%BD%D0%B8%D0%B9%20%D0%BF%D1%80%D0%BE%D1%81%D1%82%D1%96%D1%80%20%D0%92%D0%94%D0%9E%D0%9C%D0%90)&amp;ie=UTF8&amp;t=&amp;z=11&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><div><small><a href="https://embedgooglemaps.com/en/"></a></small></div><div><small><a href="https://iamsterdamcard.it"></a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><br />
-</div>
-</footer>
+                <h3>24.02 Вечір настільних ігор</h3></br>
+                 <p>☕Кожної неділі в тебе є можливість пограти настільні ігри з друзями або з новими знайомими в майже домашній атмосфері (можеш прихопити тапочки або домашній халат 😄).</br>
+              🎲Якщо не маєш жодної гри, не переживай. В нас є: "Уно", "Dixit", "Бенг", "Вибухові кошенята", "Саботер", "SET", "Dobble", "Эрудит", "Хто я", "Суперферма", "Story cubes", "Карты конфликта", "Дженга" і класика: карти, доміно, реверсі.</br>
+              💵Вартість участі символічна - 30 грн, в неї включені чай та кава. А при бажанні можеш захопити з собою будь-який інший напій, який любиш.</br>
+              🙌Частина із зібраних коштів буде відкладена для благодійних проектів або іншу допомогу.</br>
+              Реєстрація обов'язкова.</p></br>
+
+                <h3>25.02 Відкриття музичної кімнати. Перкусійні інструменти.</h3></br>
+                  <p>Відкриття музичної кімнати.
+                          Майстер-клас з гри на перкусійних інструментах (джембе, драми, шейкери, рейнстик та інші). </br>
+                      Вік і вміння грати на інструментах не має значення! </br>
+                  Якщо вам подобається музика, ви завжди хотіли спробувати пограти на музичних інструментах, саме зараз є така нагода. Керувати процесом буде вуличний музикант, джембіст з Івано-франківська Анатолій Гошівський.</br>
+                  25 лютого 18.00.</br>
+                  Простір ВДОМА, Галицька, 29, 3 поверх (над «Аромакавою»)</br>
+                        Участь безкоштовна, за попередньою реєстрацією.</p>
+        </div>
 
 
+        <p  id="services" > наші послуги </p>
+      <div class="conteiner-1">
+        <div class="box">
+          <img src="media/16.PNG" ><img/><br/><br/>
+          <section><b>конференц-сервіс</b></section>
+      </div>
+    <div class="box">
+        <img src="media/14.PNG" ><img/><br/><br/>
+        <p><b>мультикімнатні події</b></p>
+    </div>
+      <div class="box">
+        <img src="media/10.PNG" ><img/><br/><br/>
+        <p><b>дитяча кімната</b></p>
+    </div>
+</div> <br/><br/><br/>
+    <div class="conteiner-2">
+      <div class="box1">
+        <img src="media/17.PNG" ><img/><br/><br/>
+        <p><b>фотошкола з фотостудією</b><p/>
+    </div>
+        <div class="box1">
+        <img src="media/13.png" ><img/><br/><br/>
+        <p><b>музична кімната</b><p/>
+    </div>
+      <div class="box1">
+        <img src="media/11.PNG" ><img/><br/><br/>
+        <p><b>коворкінг</b></p>
+      </div>
+  </div></br></br></br></br>
+      <div id="schedule"></div>
+        <div class="our_schedule_img">
+          <img style=" height:500px;" src="media/sched2.jpg" ><img/>
+      </div>
+          <div class="our_schedule">
+            <h1> <b>ми працюємо :</b></h1> </br>
+              <div class="schedule_animation">
+                <h3>  <p id="error"><span>9:00-21:00</span></p>
+                <p id="code"><span></span><span>пн - нд</span></p><h3>
+          </div>
+        </div>
+        <div id="schema"></div>
+            <div class="rooms-schema" ><img src="media/schema.gif"></div>
+              <div class="circle">
+                <div class="pulse" id="mediaroom" ><p title="медіа-кімната">-</p></div>
+                <div class="pulse" id="salon"><p title="вітальня">-</p></div>
+                <div class="pulse" id="coworking"><p title="коворкінг рум">-</p></div>
+                <div class="pulse" id="WC"><p title="вбиральня">-</p></div>
+                <div class="pulse" id="childroom"><p title="дитяча кімната">-</p></div>
+              </div>
+                 <div class="text-under-ball"><p id="ball">загадуй питання та натискай на кулю &rarr;</p></div>
+            <div>  <button onclick="myFunction()"><img src="media/ball.jpg"/></butoon></div>
+              <p id="demo1"></p>
 
+        <div class="backgraund_contact" id="contacts">
+          <div class="contact">
+            <p><b>телефонуй:</b></p>
+              <p> <img src="media/call.png"/> 050 72 87 114 </p><br/>
+                <p><b> e-mail:<b/>
+                  <p><a href="vdoma.if@gmail.com" target="_blank">vdoma.if@gmail.com</a></p><br/>
+                   <a class="contact_href" href="https://www.facebook.com/prostirvdoma/" target="_blank"><b> ми в Facebook</b><img src="media/FB.jpg"/></a><br/>
+                     <br/><p><b>наша адреса:<b/><p/>
+                      <p>вул. Галицька 29 (3 поверх )<br/>
+                        м. Івано - Франківськ <p/>
+            </div>
+         <div class="map">
+           <div>
+             <iframe width="600" height="500" src="https://maps.google.com/maps?width=700&amp;height=440&amp;hl=en&amp;q=%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0%2C%20%D0%98%D0%B2%D0%B0%D0%BD%D0%BE-%D0%A4%D1%80%D0%B0%D0%BD%D0%BA%D0%BE%D0%B2%D1%81%D0%BA%2C%20%D1%83%D0%BB.%20%D0%93%D0%B0%D0%BB%D0%B8%D1%86%D0%BA%D0%B0%D1%8F%20%2029+(%D0%92%D1%96%D0%BB%D1%8C%D0%BD%D0%B8%D0%B9%20%D0%BF%D1%80%D0%BE%D1%81%D1%82%D1%96%D1%80%20%D0%92%D0%94%D0%9E%D0%9C%D0%90)&amp;ie=UTF8&amp;t=&amp;z=11&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
 
+             </iframe>
+         <div>
+           <small><a href="https://embedgooglemaps.com/en/"></a></small>
+         </div>
+             <div>
+               <small><a href="https://iamsterdamcard.it"></a></small>
+             </div>
+               <style>#gmap_canvas img{max-width:none!important;background:none!important;}</style>
+           </div><br />
+       </div>
+    </div>
+  </article>
+      <footer>
 
-<script type="text/javascript">
+        <span class="right"><a href="file:///C:/vDoma/index.html"><img src="media/1111.jpg"/ ></a> </span>
+    </footer>
 
-</script>
+    <script>
+      //Navigation--->
+        $("a.topLink").click(function() {
+        $(document).ready(function(){
+          $("#menu").on("click","a", function (event) {
+           //отменяем стандартную обработку нажатия по ссылке
+           event.preventDefault();
+           //забираем идентификатор бока с атрибута href
+           var id  = $(this).attr('href'),
+           //узнаем высоту от начала страницы до блока на который ссылается якорь
+           top = $(id).offset().top;
+           //анимируем переход на расстояние - top за 1500 мс
+           $('body,html').animate({scrollTop: top}, 1500);
+         });
+       });
+      });
+  </script>
+
+    <script src="js/ball.js"></script>
+    <script src="js/slider.js"></script>
   </body>
-</html>
+  </html>
