--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
       <link rel="stylesheet" href="styles/scheduls.css" type="text/css">
       <link rel="stylesheet" href="styles/slider_style.css " type="text/css">
       <link rel="stylesheet" href="styles/schema.css " type="text/css">
+      <link href="events.html" content="text/html" http-equiv="content-type">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
     <div id="page-wrap">
     <header>
         <a class="Logo" href="index.html" title="на головну"> <img src="media/1111.jpg"></img></a>
-          <nav class="navigation" style="margin-top:-80px;">
+          <nav class="navigation" id="myNavigation" style="margin-top:-80px;" >
             <ul>
                 <li class="menu" title=" Хто ми ?"><a href="#home" >ВДОМА</a></li>
+                <li class="menu" title="Дізнайся більше про найближчі події"><a href="events.html" target="_blank">ПОДІЇ</a></li>
                 <li class="menu" title="Що ми можемо Вам запропонувати"><a href="#services">ПОСЛУГИ</a></li>
                 <li class="menu" title="Дізнайся про найближчі події"><a href="#photogalery">ФОТОГАЛЕРЕЯ</a></li>
                 <li class="menu" title="Розклад наших робочих годин"><a href="#schedule">РОЗКЛАД</a></li>
@@ -43,7 +45,7 @@
       З 2017 року ВДОМА гостювали більше 800 подій, які відвідали більше 8000 осіб.</p>
   </div>
         <div>  <img class="about_us_photo" src="media/DoSome.jpg"><img/></div>
-          <p id="photogalery"> фотогалерея</p>
+          <p class="part" id="photogalery"> фотогалерея</p>
             <div class="slideshow-container">
               <div class="mySlides fade">
                 <img src="media/slideshow/1.png"/ >
@@ -76,42 +78,8 @@
       Навчайся та отримуй нові зняння, враження, друзів. Спокій, комфорт та затишок,- ось чого потребуєш ти.</br>
       Завітай до нас та переконайся, що ми саме те, що тобі потрібно вже сьогодні!</br></br> <img src="media/icon_home.png"/> </p>
       </div>
-          <div class="events"> <h1>Дізнайся про найближчі події</h1></br>
-            <h3>22.02 Майстер-клас "Крила моєї мрії (цілі)"</h3></br>
-              <p>Що буде? </br>
-              1) Подорож у світ образів і почуттів - сеанс релаксації під приємну музику.</br>
-              2) Візуалізація - в розслабленому стані будемо подумки уявляти (візуалізувати) свої, цілі і мрії, "занурюватися" всередину себе, у світ своїх істинних бажань, які є в глибинах душі.
-              3) Істинність власного бажання вивчаємо за допомогою метафоричних асоціативних карт та арт-практик. </br>
-              4) Ділимося отриманим результатом один з одним, отримуємо зворотний зв'язок, а також слова підтримки і натхнення. </br>
-              5) Пізнаємо себе, знаходимо внутрішні ресурси для здійснення мрій, відкриваємо нові грані власної особистості!</p></br>
 
-                <h3>23.02 Крафт-театр: душевна вистава Лускунчик</h3> </br>
-                 <p>Крафт-театр - вперше в Івано-Франківську театр, який залучає дітей до дійства, творить і розважає одночасно!</br>
-              Трохи тіста, цукрової пудри і кориці - і на вас дивляться оченята героїв чарівної казки.
-              Вистава для дітей і батьків від Nataliia Datsenko завітає в наш простір, щоб разом створити чудо!</br>
-              Якщо ще не чули про такий театр, то погортайте стрічку Арт-багаж, це цікавезно, а в нашому випадку - ще й смачно і ароматно:)
-              .</p></br>
-                    <p>Початок о 17:00. Тривалість 1,5-2 години.</p></br>
-
-                <h3>24.02 Вечір настільних ігор</h3></br>
-                 <p>☕Кожної неділі в тебе є можливість пограти настільні ігри з друзями або з новими знайомими в майже домашній атмосфері (можеш прихопити тапочки або домашній халат 😄).</br>
-              🎲Якщо не маєш жодної гри, не переживай. В нас є: "Уно", "Dixit", "Бенг", "Вибухові кошенята", "Саботер", "SET", "Dobble", "Эрудит", "Хто я", "Суперферма", "Story cubes", "Карты конфликта", "Дженга" і класика: карти, доміно, реверсі.</br>
-              💵Вартість участі символічна - 30 грн, в неї включені чай та кава. А при бажанні можеш захопити з собою будь-який інший напій, який любиш.</br>
-              🙌Частина із зібраних коштів буде відкладена для благодійних проектів або іншу допомогу.</br>
-              Реєстрація обов'язкова.</p></br>
-
-                <h3>25.02 Відкриття музичної кімнати. Перкусійні інструменти.</h3></br>
-                  <p>Відкриття музичної кімнати.
-                          Майстер-клас з гри на перкусійних інструментах (джембе, драми, шейкери, рейнстик та інші). </br>
-                      Вік і вміння грати на інструментах не має значення! </br>
-                  Якщо вам подобається музика, ви завжди хотіли спробувати пограти на музичних інструментах, саме зараз є така нагода. Керувати процесом буде вуличний музикант, джембіст з Івано-франківська Анатолій Гошівський.</br>
-                  25 лютого 18.00.</br>
-                  Простір ВДОМА, Галицька, 29, 3 поверх (над «Аромакавою»)</br>
-                        Участь безкоштовна, за попередньою реєстрацією.</p>
-        </div>
-
-
-        <p  id="services" > наші послуги </p>
+        <p  id="services" class="part" > наші послуги </p>
       <div class="conteiner-1">
         <div class="box">
           <img src="media/16.PNG" ><img/><br/><br/>
@@ -142,16 +110,18 @@
   </div></br></br></br></br>
       <div id="schedule"></div>
         <div class="our_schedule_img">
-          <img style=" height:500px;" src="media/sched2.jpg" ><img/>
+          <img style=" height:500px;" src="media/DoS.jpg" ><img/>
       </div>
           <div class="our_schedule">
-            <h1> <b>ми працюємо :</b></h1> </br>
+            <h1> <b>Ми працюємо для Вас щодня,</br> проте графік робочих годин може</br> варіюватися взалежності від подій.</b></br>
+            Детальніше звертайтеся за телефоном</br> або пишіть нам на пошту.</h1> </br><img src="media/icon_home.png"/>
               <div class="schedule_animation">
                 <h3>  <p id="error"><span>9:00-21:00</span></p>
                 <p id="code"><span></span><span>пн - нд</span></p><h3>
           </div>
         </div>
-        <div id="schema"></div>
+        <div id="schema" ></div>
+        <div id="schema1"><b> детальнішу інформацію</br> з приводу приміщень дізнайтеся </br>за телефоном 050 72 87 114 </b></div>
             <div class="rooms-schema" ><img src="media/schema.gif"></div>
               <div class="circle">
                 <div class="pulse" id="mediaroom" ><p title="медіа-кімната">-</p></div>
@@ -194,6 +164,7 @@
       <footer>
 
         <span class="right"><a href="file:///C:/vDoma/index.html"><img src="media/1111.jpg"/ ></a> </span>
+
     </footer>
 
     <script>
@@ -213,7 +184,7 @@
        });
       });
   </script>
-
+    <script src="js/navigation.js"></script>
     <script src="js/ball.js"></script>
     <script src="js/slider.js"></script>
   </body>
